--- a/30_sources/SRC_Zupfnoter/index.html
+++ b/30_sources/SRC_Zupfnoter/index.html
@@ -12,6 +12,7 @@
         <script src="vendor/musical.min.js" type="application/javascript"></script>
 
         <script src="vendor/opal.min.js" type="application/javascript"></script>
+        <script src="vendor/jspdf.min.js" type="application/javascript"></script>
         <script src="src/build.js" type="application/javascript"></script>
     </head>
     
