--- a/30_sources/SRC_Zupfnoter/index.html
+++ b/30_sources/SRC_Zupfnoter/index.html
@@ -31,18 +31,18 @@ C:Bernhard Weichel
 M:4/4
 L:1/16
 Q:1/4
+K:G
 %%score (T1 T2) (B1 B2)
 V:T1           clef=treble-8  name="v1"   snm="v1"
 V:T2           clef=treble-8  name="v2"   snm="v2"
-V:B1  middle=D, clef=bass      name="Basso I"    snm="B.I"  transpose=-24
-V:B2  middle=D, clef=bass      name="Basso II"   snm="B.II" transpose=-24
-K:C
+%V:B1  middle=D, clef=bass      name="Basso I"    snm="B.I"  transpose=-24
+%V:B2  middle=D, clef=bass      name="Basso II"   snm="B.II" transpose=-24
 %            End of header, start of tune body:
 % 1
 [V:T1]  [G,,16g16] | [G,,16g16] |[g G,, G, G] C D E F G A B c d e f g a b c'|
-[V:T2]  z16 | z16 | D            D D D D D D D D D D D D D D D |
+[V:T2]  z16 | z16 | D            F F F =F F F D D D D D D D D D |
 [V:T1]  EE F2 (G3G1) (A4A4)                  |(B6B2) c8                    |
-[V:T2]  D D D D D D D D D D D D D D D D | D D D D D D D D D D D D D D D D |
+[V:T2]  D D D D D D D D D D D D D D D D | D ^D D D D D D D =D D D D _D D D D |
 [V:T1]  d12 d4                          | e16                             |
 [V:T2]  D D D D D D D D D D D D D D D D | D D D D D D D D D D D D D D D D |
 %[V:B1]  z4              | C,D,E,F,    | z4           |
