improved logger had to remove auto update from the editor The entire editor, keybindings etc. were broken.

--- a/30_sources/SRC_Zupfnoter/index.html
+++ b/30_sources/SRC_Zupfnoter/index.html
@@ -58,12 +58,12 @@ V:T2           clef=treble-8  name="v2"   snm="v2"
                     <span class="head">Console</span>
                     <span class="button"><i class="icon-down-open-mini"></i></span>
                 </div>
-                <div class="body" id="console">
-                    <ul>
-                        <li class="error"><i class="icon-error-alt"></i><span class="time">now</span><span class="msg">This is a test, foobar.</span></li>
-                        <li class="warning"><i class="icon-attention"></i><span class="time">now</span><span class="msg">This is a test, foobar.</span></li>
-                        <li class="info"><i class="icon-info-circled"></i><span class="time">now</span><span class="msg">This is a test, foobar.</span></li>
-                    </ul>
+                <div class="body">
+                    <div id="console">
+                        <ul id="consoleEntries">
+                            <li class="info"><i class="icon-info-circled"></i><span class="time">now</span><span class="msg">This is a test, foobar.</span></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
