--- a/30_sources/SRC_Zupfnoter/index.html
+++ b/30_sources/SRC_Zupfnoter/index.html
@@ -22,7 +22,8 @@
     <body>
         <div id="toolbar">
             <span class="head">Zupfnoter</span>
-            <span class="button" id="tbPrint"><i class="icon-print"></i> </span>
+            <span class="button" id="tbPrintA4">print A4</i> </span>
+            <span class="button" id="tbPrintA3">print A3</i> </span>
             <span class="button" id="tbRender"><i class="icon-brush-alt"></i></span>
             <span class="button" id="tbPlay"><i class="icon-play"></i></span>
         </div>
