some refactoring * wrapped ace into a ruby class Harpnotes::TextPane * now use abcjs basic

--- a/30_sources/SRC_Zupfnoter/index.html
+++ b/30_sources/SRC_Zupfnoter/index.html
@@ -7,7 +7,7 @@
 
         <script src="vendor/jquery-1.11.1.min.js" type="application/javascript"></script>
         <script src="vendor/ace/ace.js" type="text/javascript" charset="utf-8"></script>
-        <script src="vendor/abcjs_plugin_nojquery_1.9-min.js" type="application/javascript"></script>
+        <script src="vendor/abcjs_basic_1.10-min.js" type="application/javascript"></script>
         <script type="application/javascript" src="vendor/raphael.pan-zoom.min.js"></script>
         <script src="vendor/musical.min.js" type="application/javascript"></script>
 
@@ -51,7 +51,7 @@ V:T2           clef=treble-8  name="v2"   snm="v2"
 [V:T1]  d12 d4                          | e16                             |
 [V:T2]  D D D D D D D D D D D D D D D D | D D D D D D D D D D D D D D D D |
 %[V:B1]  z4              | C,D,E,F,    | z4           |
-%[V:B2]  C,,D,,E,,F,,    | G,,A,,B,,C  | z4          |</div>
+%[V:B2]  C,,D,,E,,F,,    | G,,A,,B,,C  | z4           |</div>
                 </div>
             </div>
             <div id="consoleLog" class="container">
