--- a/30_sources/SRC_Zupfnoter/index_opal.html
+++ b/30_sources/SRC_Zupfnoter/index_opal.html
@@ -17,7 +17,7 @@
         <script type="application/javascript" src="vendor/filesaver.js"></script>
         <script type="application/javascript" src="vendor/jszip.min.js"></script>
 
-        <script type="application/javascript" src="src/build.js"></script>
+        <script type="application/javascript" src="assets/application.js"></script>
     </head>
     
     <body>
