First shot of dropbox support

--- a/30_sources/SRC_Zupfnoter/index.html
+++ b/30_sources/SRC_Zupfnoter/index.html
@@ -18,6 +18,7 @@
         <script type="application/javascript" src="vendor/jszip.min.js"></script>
 
         <script type="application/javascript" src="src/build.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dropbox.js/0.10.2/dropbox.min.js"></script>
     </head>
     
     <body>
